--- a/source/USB Test App WPF/packages.config
+++ b/source/USB Test App WPF/packages.config
@@ -4,10 +4,10 @@
   <package id="Fody" version="6.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net46" />
-  <package id="nanoFramework.CoreLibrary" version="1.1.1" targetFramework="net46" />
+  <package id="nanoFramework.CoreLibrary" version="1.2.0" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="3.1.3" targetFramework="net461" developmentDependency="true" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" requireReinstallation="true" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" requireReinstallation="true" />
   <package id="UwpDesktop" version="10.0.14393.3" targetFramework="net46" />
 </packages>
