--- a/source/nanoFramework.Tools.DebugLibrary.Net/packages.config
+++ b/source/nanoFramework.Tools.DebugLibrary.Net/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
-  <package id="Nerdbank.GitVersioning" version="2.3.167" targetFramework="net461" developmentDependency="true" />
+  <package id="Fody" version="6.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Nerdbank.GitVersioning" version="3.0.26" targetFramework="net461" developmentDependency="true" />
   <package id="NuGet.Build.Packaging" version="0.2.2" targetFramework="net46" developmentDependency="true" />
-  <package id="PropertyChanged.Fody" version="2.6.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net46" requireReinstallation="true" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net46" requireReinstallation="true" />
+  <package id="PropertyChanged.Fody" version="3.1.3" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" requireReinstallation="true" />
   <package id="UwpDesktop" version="10.0.14393.3" targetFramework="net462" />
 </packages>
